chapters cover bug on tablets

--- a/css/_by-components.css
+++ b/css/_by-components.css
@@ -299,6 +299,11 @@
     align-items: center;
 }
 
+.chapter-cover picture {
+    width: 100%;
+    height: 100%;
+}
+
 .chapter-cover img,
 .chapter-cover video {
     width: 100%;
